# xash-redirect

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.cpp  config.h  dllapi.cpp  meta_api.cpp  redirect.cpp  redirect.h  redirect_queue.cpp  redirect_queue.h  util.cpp  util.h
configs/: xash_redirect.ini
